--- a/gym.html
+++ b/gym.html
@@ -113,7 +113,7 @@
         <div class="form">
             <input type="text" placeholder="NUMBER">
         </div><div class="form">
-            <input type="text" placeholder="enter your name">
+            <input type="text" placeholder="AREA">
         </div><div class="form">
             <input type="text" placeholder="enter your name">
         </div>
